# navtelecom-cs

./: .gitignore  pyproject.toml
docs/: .~lock.protocol_of_information_exchange_navtelecom_v6.1_(100621).pdf#
navcs/: __main__.py  constants.py  db.py  protocol.py  server.py
